--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 jobs:
   build:
-    machine: true
+      - machine: true
       - image: circleci/classic:201708-01
     steps:
       - checkout
