--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,11 +4,8 @@ jobs:
     docker:
       - image: buildpack-deps:xenial
     resource_class: large
-    dependencies:
-      pre:
-        - sudo apt-get update;sudo apt-get install -y sudo
     steps:
       - checkout
       - run:
           name: Build
-          command: sudo ./build_linux64.sh
+          command: ./build_linux64.sh
