--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,3 +9,12 @@ jobs:
       - run:
           name: Build
           command: ./build_linux64.sh
+  build:
+    macos:
+      xcode: "9.0"
+      resource_class: large
+      steps:
+      - checkout
+      - run:
+        name: Build
+        command: ./build_linux64.sh
