--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,15 @@ dist: trusty
 
 sudo: required
 
+cache: nwjs-build
+
 compiler:
   - gcc
 
 script:
   - sudo apt-get install yasm
   - brew install yasm
-  - ./build_linux64.sh
+  - travis_wait 240 ./build_linux64.sh
 
 # deploy:
 #   provider: releases
