--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ os:
   - linux
   - osx
 
+matrix:
+  allow_failures:
+    - os: osx
+
 dist: trusty
 
 sudo: required
@@ -16,8 +20,8 @@ compiler:
   - gcc
 
 script:
-  - sudo apt-get install yasm
-  - brew install yasm
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; sudo apt-get install yasm  ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; brew install yasm          ; fi
   - ./build_linux64.sh
 
 # deploy:
